--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Portofolio Hari</title>
+    <title>My portofolio | Hari susanto</title>
+
+    <!-- bootstrap CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -11,6 +13,10 @@
       crossorigin="anonymous"
     />
 
+    <!-- My style CSS-->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -18,9 +24,12 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+
+  <body id="home">
     <!-- Navbar awal -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav
+      class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top shadow-sm"
+    >
       <div class="container">
         <a class="navbar-brand" href="#">MY PORTOFOLIO</a>
         <button
@@ -34,23 +43,30 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-            <a class="nav-link" href="#">About me</a>
-            <a class="nav-link" href="#">Gallery</a>
-            <a class="nav-link" href="#">Contact</a>
-          </div>
 
-          <span class="navbar-text ms-auto" style="color: white">
-            Wellcome and Let's work together.
-          </span>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#home"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About Me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link">Contact</a>
+            </li>
+          </ul>
         </div>
       </div>
     </nav>
     <!-- navbar akhir -->
 
-    <!-- Header awal -->
+    <!-- Header -->
     <div
       class="background"
       style="
@@ -96,6 +112,96 @@
         </h2>
       </section>
     </div>
+
+    <!-- Header akhir -->
+
+    <!-- About -->
+
+    <section id="about">
+      <div class="container d-flex align-items-center flex-column">
+        <h3 class="text-center pt-5">About Me</h3>
+
+        <div class="row justify-content-center text-center fs-5 mt-5">
+          <div class="col-md">
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
+              assumenda laudantium asperiores voluptas tempore distinctio iusto
+              odio, repellat dignissimos neque voluptates fugiat. Nesciunt
+              facilis deserunt tenetur laudantium quasi consectetur magnam velit
+              eveniet libero minus? Libero iste, numquam rem corrupti ut
+              dolores? Est, quas animi eum voluptates quia asperiores repellat
+              consequuntur!
+            </p>
+          </div>
+          <div class="col-md">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+              excepturi tempore, neque suscipit ratione nostrum architecto
+              accusamus maiores repellat amet.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#0099ff"
+          fill-opacity="1"
+          d="M0,224L48,213.3C96,203,192,181,288,197.3C384,213,480,267,576,245.3C672,224,768,128,864,128C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+        ></path>
+      </svg>
+    </section>
+
+    <!-- About Akhir -->
+
+    <!-- Projects -->
+    <section id="project">
+      <div class="container">
+        <div class="row text-center">
+          <div class="col">
+            <h2>My Projects</h2>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/1.jpg" class="card-img-top" alt="project-1" />
+              <div class="card-body">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/2.jpg" class="card-img-top" alt="project-1" />
+              <div class="card-body">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="img/3.jpg" class="card-img-top" alt="project-1" />
+              <div class="card-body">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Projects Akhir -->
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
