--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
           class="navbar-toggler"
           type="button"
           data-bs-toggle="collapse"
-          data-bs-target="#navbarNavAltMarkup"
-          aria-controls="navbarNavAltMarkup"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
           aria-expanded="false"
           aria-label="Toggle navigation"
         >
@@ -55,7 +55,7 @@
               <a class="nav-link" href="#about">About Me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#project">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link">Contact</a>
@@ -68,7 +68,7 @@
 
     <!-- Header -->
     <div
-      class="background"
+      class="hero-img"
       style="
         background-image: url(img/hero-img.jpg);
         background-position: center;
@@ -80,90 +80,102 @@
         filter: blur(3px);
       "
     ></div>
+    <div class="container-body">
+      <section
+        id="hero"
+        class="container p-5 d-flex align-items-center"
+        style="width: 100%"
+      >
+        <div class="text-center">
+          <img
+            src="img/foto-profil-1.png"
+            alt="profil pic Hari susanto"
+            class="img-thumbnail rounded-circle d-flex m-auto"
+            style="width: 200px"
+          />
 
-    <div
-      class="container p-5"
-      style="width: 100%; min-height: 100vh; display: flex; align-items: center"
-    >
-      <section id="hero" class="text-center">
-        <img
-          src="img/foto-profil-1.png"
-          alt="profil pic Hari susanto"
-          class="img-thumbnail rounded-circle d-flex m-auto"
-          style="width: 200px"
-        />
-        <h1
-          class="display-1"
-          style="
-            font-family: 'lilita one', sans-serif;
-            background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
-            background-clip: text;
-            -webkit-background-clip: text;
-            background-size: 300%;
-            color: transparent;
-            filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.7));
-          "
-        >
-          Hari Susanto.
-        </h1>
-        <h2 class="display-6" style="font-family: Arial, Helvetica, sans-serif">
-          Graphic design | Video editing | Social media management | Web
-          development
-        </h2>
+          <h1
+            class="display-1"
+            style="
+              font-family: 'lilita one', sans-serif;
+              background-image: linear-gradient(
+                120deg,
+                #fdfbfb 0%,
+                #ebedee 100%
+              );
+              background-clip: text;
+              -webkit-background-clip: text;
+              background-size: 300%;
+              color: transparent;
+              filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.7));
+            "
+          >
+            Hari Susanto.
+          </h1>
+
+          <h2
+            class="display-6"
+            style="
+              font-family: Arial, Helvetica, sans-serif;
+              text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.7);
+            "
+          >
+            Graphic design | Video editing | Social media management | Web
+            development
+          </h2>
+        </div>
       </section>
-    </div>
 
-    <!-- Header akhir -->
+      <!-- Header akhir -->
 
-    <!-- About -->
+      <!-- About -->
 
-    <section id="about">
-      <div class="container d-flex align-items-center flex-column">
-        <h3 class="text-center pt-5">About Me</h3>
+      <section id="about" style="">
+        <div class="container d-flex align-items-center flex-column pt-5">
+          <h3 class="text-center pt-5">About Me</h3>
 
-        <div class="row justify-content-center text-center fs-5 mt-5">
-          <div class="col-md">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia
-              assumenda laudantium asperiores voluptas tempore distinctio iusto
-              odio, repellat dignissimos neque voluptates fugiat. Nesciunt
-              facilis deserunt tenetur laudantium quasi consectetur magnam velit
-              eveniet libero minus? Libero iste, numquam rem corrupti ut
-              dolores? Est, quas animi eum voluptates quia asperiores repellat
-              consequuntur!
-            </p>
-          </div>
-          <div class="col-md">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
-              excepturi tempore, neque suscipit ratione nostrum architecto
-              accusamus maiores repellat amet.
-            </p>
+          <div class="row justify-content-center text-center fs-5 mt-5">
+            <div class="col-md">
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Mollitia assumenda laudantium asperiores voluptas tempore
+                distinctio iusto odio, repellat dignissimos neque voluptates
+                fugiat. Nesciunt facilis deserunt tenetur laudantium quasi
+                consectetur magnam velit eveniet libero minus? Libero iste,
+                numquam rem corrupti ut dolores? Est, quas animi eum voluptates
+                quia asperiores repellat consequuntur!
+              </p>
+            </div>
+            <div class="col-md">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius
+                excepturi tempore, neque suscipit ratione nostrum architecto
+                accusamus maiores repellat amet.
+              </p>
+            </div>
           </div>
         </div>
-      </div>
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path
-          fill="#0099ff"
-          fill-opacity="1"
-          d="M0,224L48,213.3C96,203,192,181,288,197.3C384,213,480,267,576,245.3C672,224,768,128,864,128C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-        ></path>
-      </svg>
-    </section>
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+          <path
+            fill="#0099ff"
+            fill-opacity="1"
+            d="M0,224L48,213.3C96,203,192,181,288,197.3C384,213,480,267,576,245.3C672,224,768,128,864,128C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
+          ></path>
+        </svg>
+      </section>
 
-    <!-- About Akhir -->
+      <!-- About Akhir -->
 
-    <!-- Projects -->
-    <section id="project">
-      <div class="container">
-        <div class="row text-center">
-          <div class="col">
+      <!-- Projects -->
+      <section id="project" class="container-fluid pt-5">
+        <div class="row text-center mt-5">
+          <div class="col" style="color: white">
             <h2>My Projects</h2>
           </div>
         </div>
 
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/1.jpg" class="card-img-top" alt="project-1" />
@@ -198,10 +210,81 @@
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <!-- Projects Akhir -->
+      <!-- Projects Akhir -->
+
+      <!-- Contact -->
+      <section id="contact" class="container-fluid pt-5">
+        <div class="row mt-5">
+          <div class="col text-center">
+            <h3>Contact Me</h3>
+          </div>
+          <div class="row mt-5 justify-content-center">
+            <div class="col-md-6">
+              <form>
+                <div class="mb-3">
+                  <label for="Name" class="form-label">Nama lengkap</label>
+                  <input
+                    type="name"
+                    class="form-control"
+                    id="name"
+                    aria-describedby="name"
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="email" class="form-label">Email</label>
+                  <input
+                    type="email"
+                    class="form-control"
+                    id="email"
+                    aria-describedby="email"
+                  />
+                </div>
+
+                <div class="mb-3">
+                  <label for="pesan" class="form-label">Pesan</label>
+                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                </div>
+
+                <div class="mb-3 form-check">
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    id="exampleCheck1"
+                  />
+                  <label class="form-check-label" for="exampleCheck1"
+                    >Sudah lengkap</label
+                  >
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Contact Akhir -->
+
+      <!-- Footer -->
+      <footer id="footer" class="container-fluid text-light bg-primary">
+        <div class="row text-center">
+          <div class="col">
+            <h1>
+              Created with love by
+              <a
+                class="fw-bold text-light"
+                href="https://www.instagram.com/harii_susantoo/"
+                >Hari Susanto.</a
+              >
+            </h1>
+          </div>
+        </div>
+      </footer>
+
+      <!-- Footer Akhir -->
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
