--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <!-- My style CSS-->
     <link rel="stylesheet" href="style.css" />
 
+    <!-- Bootstrap Icon -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
+
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -58,7 +64,7 @@
               <a class="nav-link" href="#project">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -268,17 +274,18 @@
       <!-- Contact Akhir -->
 
       <!-- Footer -->
-      <footer id="footer" class="container-fluid text-light bg-primary">
+      <footer id="footer" class="container-fluid bg-primary align-items-center">
         <div class="row text-center">
-          <div class="col">
-            <h1>
-              Created with love by
+          <div class="col p-2">
+            <h6 class="display-6" style="font-size: 1rem">
+              Created with <i class="bi bi-heart-fill"></i> by
               <a
-                class="fw-bold text-light"
+                class="fw-bold text-bg-primary"
+                style="text-decoration: none"
                 href="https://www.instagram.com/harii_susantoo/"
                 >Hari Susanto.</a
               >
-            </h1>
+            </h6>
           </div>
         </div>
       </footer>
