--- a/index.html
+++ b/index.html
@@ -161,14 +161,13 @@
             </div>
           </div>
         </div>
-
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path
             fill="#0099ff"
             fill-opacity="1"
             d="M0,224L48,213.3C96,203,192,181,288,197.3C384,213,480,267,576,245.3C672,224,768,128,864,128C960,128,1056,224,1152,234.7C1248,245,1344,171,1392,133.3L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
           ></path>
-        </svg>
+        </svg> -->
       </section>
 
       <!-- About Akhir -->
